# cef-cpp-gui-starter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  package-lock.json  package.json
cmake/: DownloadBoost.cmake  DownloadCEF.cmake  ExternalGTest.cmake  ExternalProtobuf.cmake
gui/: index.html  main.16c22a3387874c1a8506.js  polyfills.07e85ff22ba397a5bd54.js  runtime.dc50b1f33e856597a051.js
proto/: messages.proto
src/: .clang-format  ClientApp.cc  ClientApp.h  ClientHandler.cc  ClientHandler.h  ClientV8ExtensionHandler.cc  ClientV8ExtensionHandler.h  Server.cc  Server.cpp  Server.h  cef-gui.rc  cefsimple_win.cpp  main.cc  simple_app.cc  simple_app.h  simple_client.cc  simple_client.h  simple_client_win.cc  simple_handler.cpp  simple_handler.h  simple_handler_win.cpp
src/client/: cef-gui.exe.manifest  compatibility.manifest  main.cc  simple_app.cc  simple_app.h
src/crow/: crow_all.h
src/js/: rpc.js
src/server/: HttpSession.cc  HttpSession.h  Server.cc  Server.ccxx  Server.h  ServerApp.cc  ServerApp.h  ServerCommon.cc  ServerCommon.h  TcpListener.cc  TcpListener.h  WebsocketSession.cc  WebsocketSession.h  common.h  main.cpp
src/test/: RpcWebsocketTests.cc  test.js
web/: README.md  angular.json  package-lock.json  package.json
web/src/app/: app.component.ts  app.module.ts
web/src/app/services/: back-end.service.spec.ts  back-end.service.ts
